<resources>

    <string name="app_name">Metro Quiz</string>

    <string name="quiz_name">Memorias del Metro de México</string>

    <string name="quiz">Quiz</string>

    <string name="final_text_won">Estas en un vagón del metro y no has podido salir de aquí</string>

    <string name="final_text_lost">Oye chofer llévame a donde quieras, pero no me lleves hacia el metro </string>

    <string name="nextTextButton">Next</string>
    <string name="previousTextButton">Previous</string>

    <string name="question1">Question 1</string>
    <string name="optionText">Puede escoger más de una opción</string>

    <!-- Question 1 -->
    <string name="text1of10">1/10</string>
    <string name="question1_question">La silueta de esta estación se relaciona simbólicamente con ?</string>

    <!-- Question 1 xml -->

    <string name="question1_choice1">El sombrero de una bruja </string>
    <string name="question1_choice2">Una cigüeña  </string>
    <string name="question1_choice3">El nombre Eugenia, que significa “la bien nacida” </string>
    <string name="question1_choice4">Un pato en el agua </string>

    <string-array name="question1_choices">
        <item>@string/question1_choice1 </item>
        <item>@string/question1_choice2 </item>
        <item>@string/question1_choice3</item>
        <item>@string/question1_choice4</item>
    </string-array>

    <string-array name="question1_answers">
        <item>@string/question1_choice2</item>
        <item>@string/question1_choice3</item>
    </string-array>

    <string name="progressBarValue1">10</string>

    <!-- Question 2 -->
    <string name="text2of10">2/10</string>
    <string name="progressBarValue2">20</string>
    <string name="question2_question">¿Cómo se llama esta estación de la Línea 6 cuyo emblema es una hormiga?</string>
    <string name="question2_hint">Escriba su respuesta acá</string>on
    <string name="question2_answer">Azcapotzalco</string>

    <!-- Question 3 -->
    <string name="text3of10">3/10</string>
    <string name="progressBarValue3">30</string>
    <string name="question3_question">¿El ícono de Pino Suárez representa la pirámide del dios del viento ehécatl?</string>
    <string name="question3_true">Verdadero</string>
    <string name="question3_false">Falso</string>

    <string-array name="question3_choices">
        <item>@string/question3_true</item>
        <item>@string/question3_false</item>
    </string-array>

    <string name="question3_answer">@string/question3_true</string>

    <!-- Question 4 -->
    <string name="text4of10">4/10</string>
    <string name="progressBarValue4">40</string>
    <string name="question4_question">¿ La estación Jardín Balbuena rinde homenaje al poeta español ?</string>
    <string name="question4_choice1">Bernardo de Balbuena </string>
    <string name="question4_choice2">Adolfo  Sánchez Vásquez </string>
    <string name="question4_choice3">Manuel Balbuena Altolaguirre </string>
    <string name="question4_choice4">Antonio Machado </string>


    <string-array name="question4_choices">
        <item>@string/question4_choice1 </item>
        <item>@string/question4_choice2 </item>
        <item>@string/question4_choice3 </item>
        <item>@string/question4_choice4 </item>
    </string-array>

    <string name="question4_answer">@string/question4_choice1</string>

    <!-- Question 5 -->
    <string name="text5of10">5/10</string>
    <string name="progressBarValue5">50</string>
    <string name="question5_question">¿ Esta estación se llama, en honor al décimo y penúltimo tlatoani azteca: ?</string>
    <string name="question5_choice1">Cuauhtémoc </string>
    <string name="question5_choice2">Moctezuma </string>
    <string name="question5_choice3">Cuitláhuac </string>
    <string name="question5_choice4">Tizoc </string>


    <string-array name="question5_choices">
        <item>@string/question5_choice1 </item>
        <item>@string/question5_choice2 </item>
        <item>@string/question5_choice3 </item>
        <item>@string/question5_choice4 </item>
    </string-array>

    <string name="question5_answer">@string/question5_choice3</string>

    <!-- Question 6 -->
    <string name="text6of10">6/10</string>
    <string name="progressBarValue6">60</string>
    <string name="question6_question">Escriba el nombre de esta estación </string>
    <string name="question6_hint">Escriba su respuesta acá</string>
    <string name="question6_answer">Copilco</string>

    <!-- Question 7 -->
    <string name="text7of10">7/10</string>
    <string name="progressBarValue7">70</string>
    <string name="question7_question">¿ Tezonco es una de las poblaciones más antiguas de: ?</string>
    <string name="question7_choice1">Iztapalapa </string>
    <string name="question7_choice2">El Estado de México </string>
    <string name="question7_choice3">Tláhuac </string>
    <string name="question7_choice4">Azcapotzalco </string>


    <string-array name="question7_choices">
        <item>@string/question7_choice1 </item>
        <item>@string/question7_choice2 </item>
        <item>@string/question7_choice3 </item>
        <item>@string/question7_choice4 </item>
    </string-array>

    <string name="question7_answer">@string/question7_choice1</string>

    <!-- Question 8 -->
    <string name="text8of10">8/10</string>
    <string name="progressBarValue8">80</string>
    <string name="question8_question">¿ El metro Tezozomoc está ubicado en la delegación: ?</string>
    <string name="question8_choice1">Iztapalapa </string>
    <string name="question8_choice2">Azcapotzalco </string>
    <string name="question8_choice3">Tláhuac </string>
    <string name="question8_choice4">Cuauhtémoc </string>


    <string-array name="question8_choices">
        <item>@string/question8_choice1 </item>
        <item>@string/question8_choice2 </item>
        <item>@string/question8_choice3 </item>
        <item>@string/question8_choice4 </item>
    </string-array>

    <string name="question8_answer">@string/question8_choice2</string>

    <!-- Question 9 -->
    <string name="text9of10">9/10</string>
    <string name="progressBarValue9">90</string>
    <string name="question9_question">¿ Este es el ícono del Metro Benito Juárez ?</string>
    <string name="question9_choice1">Verdadero </string>
    <string name="question9_choice2">Falso </string>

    <string-array name="question9_choices">
        <item>@string/question9_choice1 </item>
        <item>@string/question9_choice2 </item>
    </string-array>

    <string name="question9_answer">@string/question9_choice2</string>

    <!-- Question 10 -->
    <string name="text10of10">10/10</string>
    <string name="progressBarValue10">100</string>
    <string name="question10_question">¿ Este es el ícono de la estación ?</string>
    <string name="question10_choice1">Metro Talismán </string>
    <string name="question10_choice2">Metro Villa de Cortés </string>
    <string name="question10_choice3">Metro Puebla </string>
    <string name="question10_choice4">Metro La Merced </string>

    <string-array name="question10_choices">
        <item>@string/question10_choice1 </item>
        <item>@string/question10_choice2 </item>
        <item>@string/question10_choice3 </item>
        <item>@string/question10_choice4 </item>
    </string-array>

    <string name="question10_answer">@string/question10_choice3</string>

    <string name="score_text"> Tuviste XXX de XXX respuestas acertadas</string>




</resources>
