<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="co.metroquiz.metromexico.WrittenAnswerActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/questiongradient">

            <ImageView
                android:id="@+id/written_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/white"
                android:gravity="center"
                android:shadowRadius="10"
                android:textColor="@android:color/background_dark"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:text="@string/question2_question" />

        </RelativeLayout>


        <EditText
            android:id="@+id/user_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:hint="@string/question2_hint"
            android:inputType="textCapWords"
            android:maxLength="45"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">


            <TextView
                android:id="@+id/currentquestion_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                tools:text="@string/text2of10" />

            <Button
                android:id="@+id/nextButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/nextTextButton"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0"
            android:progressBackgroundTint="@color/colorProgressBackgroundTint"
            android:progressTint="@color/colorProgressTint" />


    </LinearLayout>
</ScrollView>